--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-  "id": "obsidian-plugin-starter",
-  "name": "Obsidian Plugin Starter",
+  "id": "obsidian-chat",
+  "name": "Obsidian Chat",
   "minAppVersion": "1.0.0",
-  "description": "An easy way to get started with obsidian plugins",
+  "description": "Chat with Obsidian",
   "author": "Johan Friis",
   "authorUrl": "https://github.com/johanfriis",
   "isDesktopOnly": false,
-  "version": "0.0.0"
+  "version": "1.0.0"
 }
