--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "obsidian-plugin-starter",
+  "name": "obsidian-chat",
   "version": "0.0.0",
-  "description": "Obsidian Plugin Starter",
+  "description": "Obsidian Chat",
   "main": "main.js",
   "scripts": {
     "dev": "node esbuild.config.mjs",
@@ -22,5 +22,9 @@
     "tslib": "2.4.0",
     "typescript": "4.7.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "gpt-3-encoder": "^1.1.4",
+    "gptoken": "^0.1.0",
+    "openai": "^3.2.1"
+  }
 }
