--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "obsidian-chat",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Obsidian Chat",
   "main": "main.js",
   "scripts": {
@@ -23,8 +23,7 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
-    "gpt-3-encoder": "^1.1.4",
-    "gptoken": "^0.1.0",
+    "gpt-token-utils": "^1.2.0",
     "openai": "^3.2.1"
   }
 }
