--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,59 +1,23 @@
 # .github/workflows/release.yml
 name: Create Release
 
-on:
-  push:
-    tags:
-      - "*"
+on: push
 
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 14
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build
-        run: npm run build
-
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
-
-      - name: Upload assets
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ${{ matrix.asset.path }}
-          asset_name: ${{ matrix.asset.name }}
-          asset_content_type: ${{ matrix.asset.content_type }}
-        strategy:
-          matrix:
-            asset:
-              - path: ./main.js
-                name: main.js
-                content_type: application/javascript
-              - path: ./styles.css
-                name: styles.css
-                content_type: text/css
-              - path: .manifest.json
-                name: manifest.json
-                content_type: application/json
+          node-version: 16
+      - run: npm ci
+      - run: npm run build
+      - id: create_release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags')
+        with: |
+          main.js
+          styles.css
+          manifest.json
