--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,7 +17,8 @@ jobs:
       - id: create_release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags')
-        with: |
-          main.js
-          styles.css
-          manifest.json
+        with:
+          files: |
+            main.js
+            styles.css
+            manifest.json
