--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node esbuild.config.mjs",
     "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-    "version:bump": "node version-bump.mjs"
+    "version": "node version-bump.mjs && git add -A",
+    "postversion": "git push && git push --tags"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +24,6 @@
     "typescript": "4.7.4"
   },
   "dependencies": {
-    "gpt-token-utils": "^1.2.0",
     "openai": "^3.2.1"
   }
 }
